crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_return_statement-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "stmt().parse(\"return;\")"
---
Ok:
  - Return: ~
  - start: 0
    end: 7

