crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_return_statement.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "stmt().parse(\"return 10;\")"
---
Ok:
  - Return:
      - Value:
          I32: 10
      - start: 7
        end: 9
  - start: 0
    end: 10

