crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_struct_declaration-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "type_declaration().parse(\"struct Foo {}\")"
---
Ok:
  Struct:
    name:
      - Foo
      - start: 6
        end: 11
    fields: []

