crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_struct_declaration-4.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "type_declaration().parse(\"struct Foo { a: i32, }\")"
---
Ok:
  Struct:
    name:
      - Foo
      - start: 6
        end: 11
    type_parameters: ~
    fields:
      ? - a
        - start: 13
          end: 14
      : - I32
        - start: 15
          end: 19

