crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_struct_literal-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expression().parse(\"Foo { a: 10 }\")"
---
Ok:
  - Struct:
      - - Foo
        - start: 0
          end: 4
      - ? - a
          - start: 5
            end: 7
        : - Value:
              I32: 10
          - start: 9
            end: 11
  - start: 0
    end: 13

