crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_struct_literal.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expression().parse(\"Foo { a: 10, b: 20 }\")"
---
Ok:
  - Struct:
      - - Foo
        - start: 0
          end: 4
      - Named:
          - - - a
              - start: 5
                end: 7
            - - Value:
                  I32: 10
              - start: 9
                end: 11
          - - - b
              - start: 12
                end: 14
            - - Value:
                  I32: 20
              - start: 16
                end: 18
  - start: 0
    end: 20

